fix(demo-app): username should not overflow info card (#1498)

--- a/packages/demo-app/src/App.module.scss
+++ b/packages/demo-app/src/App.module.scss
@@ -46,6 +46,12 @@
       border-radius: 8px;
       width: 400px;
 
+      div {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+
       span {
         font: var(--font-label-large);
       }
